# CyberSecTools

./: .gitignore  README.md
burp_bambdas/: hashHighlighter.bambda
burper/: burper  test.burp
clean_hosts/: clean_hosts
clickjack/: .gitignore  Cargo.toml  README.md
clickjack/crates/clickjack-cli/: build.rs
clickjack/crates/clickjack-cli/src/: assets.rs  server.rs
clickjack/crates/clickjack-core/: Cargo.toml
clickjack/crates/clickjack-core/src/: config.rs  template.rs
clickjack/crates/clickjack-wasm/src/: decoy.rs  drag.rs  history.rs  phish.rs  utils.rs
clickjack/go/: package-lock.json
clickjack/go/ts/: drag.ts  phish.ts
clickjack/static/: erebus.css
cloud-audit/: cloudsplain.py  iam-findings.py  iam_table.py  nacl_findings.py  s3-arns.py  s3-table.sh
dir_build/: Cargo.toml  dir_build
dir_build/src/: main.rs
engage_jr/: Makefile  README.md  aws.go  aws_test.go  burp.go  burper  clean_hosts  config  config.go  config_test.go  dir_build  dirs.go  dirs_test.go  engage_jr  finish.go  go.mod  hosts.go  hosts_test.go  list.go  list_test.go  logger.go  main.go  main_test.go  meta.go  meta_test.go  notes.go  obsidian.go  obsidian_test.go  open.go  open_test.go  template.go  tmux.go  tmux_test.go
engage_jr/templates/: HTB.json  THM.json  cloud.json  exam.json  infra.json  swigger.json  work.json
go_clickjack/: .gitignore  Dockerfile  Justfile  Makefile  README.md  clickjack.go  package.json
go_clickjack/crates/clickjack-cli/: Cargo.toml
go_clickjack/crates/clickjack-cli/src/: main.rs  server.rs
go_clickjack/crates/clickjack-cli/templates/: index.html
go_clickjack/crates/clickjack-core/: Cargo.toml
go_clickjack/crates/clickjack-core/src/: lib.rs  template.rs
go_clickjack/crates/clickjack-wasm/: Cargo.toml
go_clickjack/crates/clickjack-wasm/src/: decoy.rs  drag.rs  init.rs  lib.rs  phish.rs
go_clickjack/go/: clickjack.go  go.mod  tsconfig.json
go_clickjack/go/static/: clickjack.css
go_clickjack/go/ts/: templates.ts
go_clickjack/html/: index.html
go_clickjack/static/: app.js  clickjack.css  index.css
go_clickjack/ts/: decoy.ts  drag.ts  history.ts  main.ts
go_clickjack/website/: index.css  index.html
ratelimit_testing/: README.md  ratelimit_tester.sh  ratelimit_tester_enum.sh
recon_jr/: README.md  config.go  config_test.go  crtsh.go  go.mod  hosts.go  hosts_test.go  logger.go  main.go  meta.go  meta_test.go  nessus.go  nessus_test.go  overview.go  parsers.go  parsers_test.go  phases.go  plan.md  report.go  report_test.go  runner.go  runner_test.go  scope.go  scope_init.go  scope_test.go
xpath_sqli/: Cargo.toml
xpath_sqli/src/: main.rs
